Sections changes and scrolls/overflows fixed

--- a/css/base.css
+++ b/css/base.css
@@ -1,19 +1,18 @@
 
 /*
-html, body, * {
+* { margin : 0; padding : 0; }
 */
-html, body  {
-	margin  : 0;
-	padding : 0;
 
-	/* overflow: hidden; */
-	
-	/*
+html, body  {
+	margin     : 0;
+	padding    : 0;
+
+	overflow   : hidden;
+
 	min-height : 100%;
 	min-width  : 100%;
 	height     : 100%;
 	width      : 100%;	
-	*/
 }
 
 a,
@@ -21,8 +20,6 @@ a:hover,
 a:focus,
 a:active,
 a:visited {
-	border-radius : 5px;
-	padding : 2px;
 	text-decoration : none;
 }
 
@@ -41,30 +38,21 @@ ol, ul {
 figure { margin : 0; }
 
 
+
 /***  Forms  ***/
 
 input,
 textarea {
-	border : 1px solid #DDD;
+	border  : 1px solid #DDD;
 	border-radius : 4px;
+	outline : 0 none;
 	padding : 0.4em 0.8em;
-}
-
-input:focus,
-textarea:focus {
-	border : 1px solid #915BD3;
-}
-
-textarea {
-	margin : 1.5% 0;
-	height : 25%;
-	width  : 84%;
 }
 
 input {
 	margin-right : 1%;
 	height : 2em;
-	width  : 27%;
+	width  : 41.25%;
 }
 
 input[type="submit"] {
@@ -76,4 +64,17 @@ input[type="submit"] {
 	width  : 12em;
 	
 	cursor : pointer;
+}
+
+textarea {
+	margin : 1.5% 0;
+	height : 25%;
+	width  : 84%;
+}
+
+/* Focus effect */
+
+input:focus,
+textarea:focus {
+	border : 1px solid #915BD3;
 }
